--- a/ShoppingList/Views/ProductsToBuy.xaml
+++ b/ShoppingList/Views/ProductsToBuy.xaml
@@ -2,16 +2,30 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShoppingList.Views.ProductsToBuy"
-             Title="ProductsToBuy">
+             Title="Products to Buy"
+             BackgroundColor="#f7f7f7">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add"
-                         Clicked="AddClicked"
-                         IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}"/>
+                     Clicked="AddClicked"
+                     IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
     </ContentPage.ToolbarItems>
-    <VerticalStackLayout>
-        <ScrollView>
-            <StackLayout x:Name="ProductsStackLayout" Padding="10">
-            </StackLayout>
-        </ScrollView>
+
+    <ScrollView>
+    <VerticalStackLayout Spacing="20" Padding="20">
+        <Label Text="Products to Buy"
+               FontSize="24"
+               FontAttributes="Bold"
+               HorizontalOptions="Center"
+               TextColor="#333333" />
+
+        <StackLayout x:Name="ProductsStackLayout" Padding="10">
+            <Label Text="Your shopping list is empty."
+                       FontSize="18"
+                       TextColor="#666666"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Center"
+                       IsVisible="True" />
+        </StackLayout>
     </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
